Fixed readability of notification filter search warning (#60)
* Fixed readability of notification filter search warning

* Update theme version to 4.0.5

--- a/material-github.user.css
+++ b/material-github.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Material Dark GitHub
-@version      4.0.4
+@version      4.0.5
 @description  A Material Dark theme for GitHub
 @namespace    CharlieEtienne
 @author       CharlieEtienne
@@ -642,6 +642,9 @@
 	.notification-navigation .filter-item:not(.selected):hover {
 		color: rgba(255,255,255,calc(0.9 * /*[[text_brightness]]*/))!important;
 		color: var(--text11) !important;
+	}
+	.js-notification-search-warning-container {
+		color: var(--text7) !important;
 	}
 	.card-filter-autocomplete-dropdown .navigation-focus, .card-filter-autocomplete-dropdown [aria-selected=true] {
 		background-color: var(--selected2);
